2015-12-02 Massimo Manghi <mxmanghi@apache.org>
    * doc/images/*.png, doc/rivet.css: styles and navigation items color
    changed to mark the difference with Rivet 2.2 and Rivet 2.1
    * doc/xml/commands.xml,intro.xml: new commands ::rivet::exit and
    ::rivet::catch documented
    * rivet/init.tcl: new version 2.3 of package Rivet
 
2015-11-27 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: version number increased to 2.3.0

2015-11-25 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: add macro RIVET_EXPORT_COMMAND (wraps Tcl_Export)
    * src/librivet/rivet[WWW|List|Crypt].c: proper way to put these commands
    on the export list
    * src/rivetcmds/rivetCore.c: Commands are now put explicitly on the
    export list (if build with --enable-rivet-commands-export)
    * rivet/init.tcl: removed -force switch when importing the ::rivet command
    set. Rationalization of Tcl commands export list
    * doc/xml/command.xml: add manual page for ::rivet::exit
    * tests/bailout.test: add test for bailout commands ::rivet::abort_page
    and ::rivet::exit
    * configure.ac: add INIT_VERSION symbol substitution

2015-11-21 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetcmds/rivetCore.c: return EXITPAGECODE when ::rivet::exit
    is called.Add [::rivet::abort_page -exiting] exit condition detection

2015-11-20 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/catch.tcl: new command [::rivet::catch ...] wraps
    the core command but returns an error anyway if raised by
    either [::rivet::abort_page] or [::rivet::exit]

2015-11-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/hexglyphs/hexglyphs.tcl: now printing the whole
    alphabet and some puntuation character
    * src/rivetcmd/rivetCore.c: Implementing command exit
    * src/apache-2/mod_rivet.c: New command ::exit required the flag
    exit_process be checked to see if a child process must exit and